<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_convert"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/valor_converter"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rb_grama"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_valor">

        <RadioButton
            android:id="@+id/rb_grama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/converter_para_gramas"/>

        <RadioButton
            android:id="@+id/rb_tonelada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/converter_para_tonelada"/>
        <RadioButton
            android:id="@+id/rb_miligrama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/converter_para_miligrama"/>
    </RadioGroup>
    


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_converter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Converter"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_valor_convertido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Valor aqui"
        android:textColor="@color/color_white"
        app:layout_constraintTop_toBottomOf="@id/btn_converter"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>